# notes

./: .gitignore  .npmrc  App.tsx  Cargo.toml  app.json  babel.config.js  cesconfig.jsonc  eslint.config.js  index.html  metro.config.js  package-lock.json  package.json  tailwind.config.js  tracer-wasm.d.ts  tsconfig.json
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
components/: AppShell.tsx  DebugLogsScreen.tsx  DrawingScreen.tsx  HomeScreen.tsx  quotes.ts  theme.ts  theme.tsx
constants/: colors.d.ts  colors.js
crates/tracer-core/: Cargo.toml
crates/tracer-core/src/: lib.rs
modules/expo-local-vectorizer/android/: CMakeLists.txt  build.gradle
modules/expo-local-vectorizer/android/src/main/cpp/: trace_jni.c
modules/expo-local-vectorizer/android/src/main/kotlin/expo/modules/localvectorizer/: ExpoLocalVectorizerModule.kt
pr-19/: index.html
pr-30/: index.html
pr-38/: index.html
pr-39/: index.html
pr-40/: index.html
pr-41/: index.html
pr-43/: index.html
pr-44/: index.html
pr-45/: index.html
pr-46/: index.html
pr-47/: index.html
pr-48/: index.html
pr-49/: index.html
pr-50/: index.html
pr-51/: index.html
pr-52/: index.html
pr-53/: index.html
pr-55/: index.html
pr-57/: index.html
pr-58/: index.html
pr-60/: index.html
pr-61/: index.html
pr-62/: index.html
pr-64/: index.html
pr-65/: index.html
pr-67/: index.html
scripts/: preview-web.cjs
services/: DatabaseService.ts  ImageMask.native.ts  ImageMask.ts  ImageMask.web.ts  ImportTypes.ts  JournalTypes.ts  (+11 more)
(+159 files in other folders)
