[package]
name = "tracer-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "tracer_core"
path = "src/lib.rs"

[dependencies]
serde.workspace = true
visioncortex = "=0.8.8"
vtracer = "=0.6.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
instant = { version = "=0.1.13", features = ["wasm-bindgen"] }
